--- a/charts/nfs-provisioner/templates/rbac.yaml
+++ b/charts/nfs-provisioner/templates/rbac.yaml
@@ -2,12 +2,14 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: nfs-provisioner
+  namespace: veo
 {{ if .Values.rbac.enabled }}
 ---
-kind: ClusterRole
+kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: nfs-provisioner-runner
+  namespace: veo
 rules:
   - apiGroups: [""]
     resources: ["persistentvolumes"]
@@ -29,16 +31,17 @@ rules:
     resourceNames: ["nfs-provisioner"]
     verbs: ["use"]
 ---
-kind: ClusterRoleBinding
+kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: run-nfs-provisioner
+  namespace: veo
 subjects:
   - kind: ServiceAccount
     name: nfs-provisioner
     namespace: "{{ .Release.Namespace }}"
 roleRef:
-  kind: ClusterRole
+  kind: Role
   name: nfs-provisioner-runner
   apiGroup: rbac.authorization.k8s.io
 {{ end }}
