--- a/charts/nfs-provisioner/templates/rbac.yaml
+++ b/charts/nfs-provisioner/templates/rbac.yaml
@@ -39,9 +39,10 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: nfs-provisioner
-    namespace: "{{ .Release.Namespace }}"
+    namespace: veo
 roleRef:
   kind: Role
   name: nfs-provisioner-runner
   apiGroup: rbac.authorization.k8s.io
+  namespace: veo
 {{ end }}
