--- a/charts/nfs-provisioner/values.yaml
+++ b/charts/nfs-provisioner/values.yaml
@@ -1,4 +1,4 @@
-image: "quay.io/kubernetes_incubator/nfs-provisioner:v1.0.8"
+image: "quay.io/kubernetes_incubator/nfs-provisioner:latest"
 
 # Set the provisioner name for the nfs provisioner.
 provisionerName: "local.net/nfs"
