--- a/charts/nfs-provisioner/templates/rbac.yaml
+++ b/charts/nfs-provisioner/templates/rbac.yaml
@@ -6,7 +6,7 @@ metadata:
 {{ if .Values.rbac.enabled }}
 ---
 kind: Role
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: nfs-provisioner-runner
   namespace: veo
@@ -32,7 +32,7 @@ rules:
     verbs: ["use"]
 ---
 kind: RoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: run-nfs-provisioner
   namespace: veo
